# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "justpy"
authors = [
  {name = "Eli Mintz", email = "eli.mintz@gmail.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
# flit_core.config.ConfigError: license field should be <class 'dict'>, not <class 'str'>
# license= "Apache-2.0"
dependencies = [
        'starlette>=0.20.4', 
        'uvicorn>=0.18.3', 
        'itsdangerous>=2.1.2', 
        'websockets',
        'addict>=2.4.0', 
        'jinja2>=3.1.2', 
        'demjson3>=3.0.5', 
        'httpx>=0.23.0', 
        'aiofiles',
        'twine', 
        'wheel'
    ]

requires-python = ">=3.7"    
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]   
 
[project.urls]
Home = "https://justpy.io/"
Documentation = "https://justpy.io/"
Source = "https://github.com/justpy-org/justpy"

[project.optional-dependencies]
test = [
  "aiohttp",
  "asynctest",
  "green",
  "pandas",
  "psutil",
  "selenium",
  "webdriver-manager"
]

