# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "justpy"
authors = [
  {name = "Eli Mintz", email = "eli.mintz@gmail.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
# flit_core.config.ConfigError: license field should be <class 'dict'>, not <class 'str'>
license = { file="LICENSE" }
dependencies = [
        'addict>=2.4.0',
        'itsdangerous>=2.1.2',
        'jinja2>=3.1.2',
        'hjson>=3.1.0',
        'httpx>=0.23.0',
        'psutil>=5.9.2',
        'starlette>=0.20.4',
        'uvicorn>=0.18.3',
        'websockets',
        'aiofiles',
        'twine',
        'wheel'
    ]

requires-python = ">=3.7"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "justpy/__init__.py"

[project.urls]
Home = "https://justpy.io/"
Documentation = "https://justpy.io/"
Source = "https://github.com/justpy-org/justpy"

[project.optional-dependencies]
test = [
    "aiohttp",
    "altair", # example
    "asynctest",
    "bokeh==2.3.2", # example
    "green",
    "matplotlib", #example
    "pandas", # example
    #pandas_datareader", #example
    "plotly", # example
    "pydeck", # example
    "pygments", # demo_browser
    "seaborn", # example
    #scipy", # example
    "selenium",
    "testfixtures",
    "vega_datasets", #example
    "webdriver-manager",
    "pandas-datareader" # example
]

[tool.hatch.build.targets.wheel]
packages = [
  "jpcore",
  "justpy",
]
